feat: finish api v1 (without error handling)
